--- a/style.css
+++ b/style.css
@@ -73,27 +73,31 @@ nav{
     display: flex;
     align-items: center;
     justify-content: center;
-    position:relative; 
+    position: relative;
+
+
 }
 
-
-
 .sliderTitle {
-    position: relative;
+    position: absolute;
     top: 10%;
     right: 10%;
     font-size: 60px;
     font-weight: 900;
     text-align: center;
     color: white;
+    z-index: 1;
+
 }
 
 .sliderPrice {
-    position: relative;
+    position: absolute;
     top: 10%;
-    right: 10%;
+    left: 10%;
     font-size: 60px;
     font-weight: 300;
     text-align: center;
     color: white;
+    border: 1px solid gray;
+    z-index: 1;
 }
